Show more details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SpaceX</string>
+    <string name="status_label">status:</string>
+    <string name="location_label">location:</string>
 </resources>
